--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,5 @@ jobs:
     - name: Create network
       run: docker network create selenoid
     - name: Run docker-compose
-      run: |
-            docker-compose up
-            docker stop $(docker ps -a -q)
+      run: docker-compose up --abort-on-container-exit
       
